写usecase， 把常见的功能鞋一些简单的例子

--- a/usecase.ipynb
+++ b/usecase.ipynb
@@ -37,7 +37,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 低温酸奶测试用例"
+    "# 检查测试用例中的准确率"
    ],
    "metadata": {
     "collapsed": false,
@@ -79,12 +79,7 @@
     "        return mu1.calc_weight()\n",
     "    except Exception as e:\n",
     "        traceback.print_exc()\n",
-    "        return '空'\n",
-    "\n",
-    "unitparser.DEBUG=True\n",
-    "if unitparser.DEBUG:\n",
-    "    i_row = 449\n",
-    "    df.iloc[i_row:i_row+1].apply(lambda row: calc_weight(row), axis=1)"
+    "        return '空'"
    ],
    "metadata": {
     "collapsed": false,
@@ -95,13 +90,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0009881422924901185\n"
+      "准确率= 99.90118577075098%\n"
      ]
     },
     {
@@ -118,7 +113,7 @@
     "df[\"total-weight\"].fillna('空', inplace=True)\n",
     "df[\"fill_weight\"] = df.apply(lambda row: calc_weight(row), axis=1)\n",
     "df_miss = df[df[\"fill_weight\"]!= df[\"total-weight\"]]\n",
-    "print(len(df_miss)/len(df))\n",
+    "print('准确率= '+str((1-len(df_miss)/len(df))*100)+'%')\n",
     "display(df_miss.head(99))"
    ],
    "metadata": {
@@ -129,14 +124,119 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# 一些使用例子"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 38,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1l*12盒\n",
+      "(11, 17)\n",
+      "12000\n",
+      "---------------------\n",
+      "250g*1瓶+200g*5瓶\n",
+      "(5, 20)\n",
+      "1250\n",
+      "---------------------\n",
+      "1l*(12盒|24盒)\n",
+      "(11, 21)\n",
+      "24000.0\n",
+      "---------------------\n",
+      "未添加【吨】 None\n",
+      "添加【吨】 (2吨)|(1吨)|(10t)|(5吨)|(3吨)\n",
+      "---------------------\n",
+      "500g*6盒\n",
+      "500g*6盒*11\n",
+      "---------------------\n",
+      "<class 'list'>\n",
+      "[3箱, 500g*6盒]\n",
+      "<class 'weightunit.MultiUnit'>\n",
+      "500g*6盒*3箱\n",
+      "---------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "from weightunit import parse_str, UnitLevel\n",
+    "\n",
+    "# 乘法情况, 将升转化为毫升\n",
+    "mu = parse_str(\"德国进口德亚全脂纯牛奶1L*12盒整箱营养早餐奶学生儿童老人\")\n",
+    "print(mu)\n",
+    "print((mu.start_index, mu.end_index))\n",
+    "print(mu.calc_weight())# 计算单位，并转换为ml\n",
+    "print(\"---------------------\")\n",
+    "\n",
+    "# 有加法的情况\n",
+    "mu = parse_str(\"简醇0蔗糖250g*1瓶+开啡尔草莓味200g*5瓶\")\n",
+    "print(mu)\n",
+    "print((mu.start_index, mu.end_index))\n",
+    "print(mu.calc_weight())\n",
+    "print(\"---------------------\")\n",
+    "\n",
+    "# 或的情况\n",
+    "mu = parse_str(\"德国进口德亚全脂纯牛奶1L*12盒|24盒整箱营养早餐奶学生儿童老人\")\n",
+    "print(mu)\n",
+    "print((mu.start_index, mu.end_index))\n",
+    "print(mu.calc_weight())# 计算单位，并转换为ml\n",
+    "print(\"---------------------\")\n",
+    "\n",
+    "# 添加自定义的重量单位\n",
+    "mu = parse_str(\"手拉葫芦吊机手动2吨倒链1吨10t小型5吨家用起重机3吨工业吊葫芦\")\n",
+    "print(\"未添加【吨】\",mu)\n",
+    "ul = UnitLevel.gen_default()\n",
+    "ul.add_unit_word(\"吨\", level=1)\n",
+    "ul.add_unit_word(\"t\", level=1)\n",
+    "mu = parse_str(\"手拉葫芦吊机手动2吨倒链1吨10t小型5吨家用起重机3吨工业吊葫芦\", unit_level=ul)\n",
+    "print(\"添加【吨】\",mu)\n",
+    "print(\"---------------------\")\n",
+    "\n",
+    "\n",
+    "# 设置str_modifier函数，可以在真正解析前字符串前，删除一些字符，让长串的计算公式连一起\n",
+    "def str_modifier(input_str):\n",
+    "    # 替代默认的str修改，不对input_str进行修改\n",
+    "    return input_str\n",
+    "mu = parse_str(\"爱尔培 奶酪500g*6盒11月29到期\", )\n",
+    "print(mu)\n",
+    "mu = parse_str(\"爱尔培 奶酪500g*6盒11月29到期\", str_modifier=str_modifier)\n",
+    "print(mu)\n",
+    "print(\"---------------------\")\n",
+    "\n",
+    "# 获得所有的段落，不强制合并到一个公式里\n",
+    "mu_list = parse_str(\"3箱爱尔培 奶酪500g*6盒11月29到期\", only_one=False)\n",
+    "print(type(mu_list))\n",
+    "print(mu_list)\n",
+    "mu_list = parse_str(\"3箱爱尔培 奶酪500g*6盒11月29到期\", only_one=True)\n",
+    "print(type(mu_list))\n",
+    "print(mu_list)\n",
+    "print(\"---------------------\")"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   }
